Fix issues of error handling in PKG deployment  (#168)
* Add ExceptionMapper for gRPC exception

* Make default value for function type

* Make HPA disable by default

* Fix replicas for deployment provision is not effective