@@ -2,10 +2,13 @@ package org.hpcclab.oaas.invoker;
 
 import com.fasterxml.jackson.core.JsonParseException;
 import com.fasterxml.jackson.databind.JsonMappingException;
+import io.grpc.Status;
+import io.grpc.StatusRuntimeException;
 import io.vertx.core.json.JsonObject;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.validation.ConstraintViolationException;
 import jakarta.ws.rs.core.Response;
+import org.hpcclab.oaas.model.exception.DataAccessException;
 import org.hpcclab.oaas.model.exception.StdOaasException;
 import org.jboss.resteasy.reactive.server.ServerExceptionMapper;
 import org.slf4j.Logger;
@@ -16,6 +19,17 @@ import java.util.stream.Collectors;
 @ApplicationScoped
 public class ExceptionMapper {
   private static final Logger LOGGER = LoggerFactory.getLogger(ExceptionMapper.class);
+
+  @ServerExceptionMapper(StatusRuntimeException.class)
+  public Response exceptionMapper(StatusRuntimeException statusRuntimeException) {
+    Response.Status status = Response.Status.INTERNAL_SERVER_ERROR;
+    if (statusRuntimeException.getStatus() == Status.UNAVAILABLE)
+      status = Response.Status.SERVICE_UNAVAILABLE;
+    return Response.status(status)
+      .entity(new JsonObject()
+        .put("msg", statusRuntimeException.getMessage()))
+      .build();
+  }
 
   @ServerExceptionMapper(IllegalArgumentException.class)
   public Response exceptionMapper(IllegalArgumentException illegalArgumentException) {
@@ -59,7 +73,7 @@ public class ExceptionMapper {
         .put("violations", exception.getConstraintViolations()
           .stream()
           .map(cv -> cv.getPropertyPath().toString() + " " + cv.getMessage())
-          .collect(Collectors.toList())
+          .toList()
         ))
       .build();
   }
